bootstraped angular and bootstrap-css

--- a/src/main/resources/web/infoview/index.html
+++ b/src/main/resources/web/infoview/index.html
@@ -4,8 +4,7 @@
 <title>Pomodoro en guete</title>
 <meta charset="UTF-8">
 <script src="/lib/bootstrap-3.3.5/js/bootstrap.min.js"></script>
-<script src="angular.min.js"></script>
-<script src="angular-1.4/angular.min.js"></script>
+<script src="/lib/angular-1.4/angular.min.js"></script>
 <script src="/js/pomodoro.controller.js"></script>
 <script src="/js/pomodoro.modul.js"></script>
 <script src="/js/pomodoro.service.js"></script>
