--- a/src/main/resources/web/infoview/index.html
+++ b/src/main/resources/web/infoview/index.html
@@ -1,1 +1,28 @@
-you are on info screen..
+<!DOCTYPE html>
+<html ng-app="pomodoro">
+<head>
+<title>Pomodoro en guete</title>
+<meta charset="UTF-8">
+<script src="/lib/bootstrap-3.3.5/js/bootstrap.min.js"></script>
+<script src="angular.min.js"></script>
+<script src="angular-1.4/angular.min.js"></script>
+<script src="/js/pomodoro.controller.js"></script>
+<script src="/js/pomodoro.modul.js"></script>
+<script src="/js/pomodoro.service.js"></script>
+</head>
+
+<body ng-controller="pomodoroController">
+ <h1>Angemeldete Tomaten</h1>
+ <h2>{{2-1}}</h2>
+ <h2>hallo adi3</h2>
+ <ul>
+  <li ng-repeat="tomato in tomatoes">{{tomato.name}}</li>
+ </ul>
+
+
+
+
+
+
+</body>
+</html>
