--- a/src/main/resources/web/infoview/index.html
+++ b/src/main/resources/web/infoview/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html ng-app="pomodoro">
+<html>
 <head>
 <title>Pomodoro en guete</title>
 <meta charset="UTF-8">
 <script src="/lib/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="/lib/angular-1.4/angular.min.js"></script>
-<script src="/js/pomodoro.controller.js"></script>
-<script src="/js/pomodoro.modul.js"></script>
-<script src="/js/pomodoro.service.js"></script>
+
+<script src="/info/js/pomodoro.modul.js"></script>
+<script src="/info/js/pomodoro.controller.js"></script>
 </head>
 
-<body ng-controller="pomodoroController">
+<body ng-app="pomodoro">
  <h1>Angemeldete Tomaten</h1>
  <h2>{{2-1}}</h2>
  <h2>hallo adi3</h2>
