--- a/src/main/resources/web/infoview/index.html
+++ b/src/main/resources/web/infoview/index.html
@@ -3,6 +3,9 @@
 <head>
 <title>Pomodoro en guete</title>
 <meta charset="UTF-8">
+
+<link href="/lib/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet">
+
 <script src="/lib/jquery-2.1.4/jquery-2.1.4.min.js"></script>
 <script src="/lib/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="/lib/angular-1.4/angular.min.js"></script>
@@ -18,7 +21,7 @@
  <h1>Angemeldete Tomaten</h1>
  
  <ul ng-repeat="user in vm.users">
-  <li>{{user.nr}}</li>
+  <li class="label label-primary">{{user.nr}}</li>
   <li>{{user.name}}</li>
   <li>{{user.group.name}}</li>
   <li>{{user.state}}</li>
