--- a/src/main/resources/web/infoview/index.html
+++ b/src/main/resources/web/infoview/index.html
@@ -7,11 +7,15 @@
 <link href="/lib/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet">
 <link href="/lib/bootstrap-3.3.5/fonts/glyphicons-halfings-regular.eot" rel="stylesheet">
 
+<link href="/lib/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet" >
+
 <script src="/lib/jquery-2.1.4/jquery-2.1.4.min.js"></script>
 <script src="/lib/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="/lib/angular-1.4/angular.min.js"></script>
+<script src="/lib/angular-1.4/angular-filter.min.js"></script>
 <script src="/lib/angular-1.4/angular-route.min.js"></script>
 <script src="/lib/angular-1.4/angular-resource.min.js"></script>
+
 
 <script src="/info/js/pomodoro.modul.js"></script>
 <script src="/info/js/pomodoro.controller.js"></script>
@@ -21,12 +25,24 @@
 <body ng-app="pomodoro" ng-controller="pomodoroController as vm">
  <h1>Angemeldete Tomaten</h1>
  
- <ul ng-repeat="user in vm.users">
-  <li class="label label-primary"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> {{user.nr}}</li>
-  <li>{{user.name}}</li>
-  <li>{{user.group.name}}</li>
-  <li>{{user.state}}</li>
- </ul>
+ <div ng-repeat="(key, value) in vm.users | groupBy :'group.name'" class="container-fluid jumbotron">
+ <h3>{{key}}</h3>
+ <div class="row">
+ 	<div class="col-md-4 text-danger">User</div>
+ 	<div class="col-md-4 text-danger">Name</div>
+ 	<div class="col-md-1 text-danger">State</div>
+ 	<div class="col-md-2 text-danger">Time remaining</div>
+ </div>
+ <div class="row" ng-repeat="user in value">
+  <div class="col-md-4">
+  	<i class="fa fa-user"></i> {{user.nr}}
+  </div>
+  <div class="col-md-4">{{user.name}}</div>
+  <div class="col-md-1">{{user.state}}</div>
+  <div class="col-md-2">{{user.remainingTime}}</div>
+ </div>
+ 
+ </div>
 
 
 </body>
