added biggest tomato

--- a/src/main/resources/web/infoview/index.html
+++ b/src/main/resources/web/infoview/index.html
@@ -26,6 +26,18 @@
 
 <body ng-app="pomodoro" ng-controller="pomodoroController as vm">
 	<div class="container">
+		<h1>Biggest Tomato</h1>
+		<div ng-repeat="tomato in vm.biggestTomato" class="container-fluid jumbotron">
+			<div class="col-md-4 infoview-font-normal">
+				<i class="fa fa-user infoview-font-normal"></i>
+				{{tomato.userNr}}
+			</div>
+			<div class="col-md-4 infoview-font-normal">{{tomato.name}}</div>
+			<div class="col-md-4 infoview-font-normal">{{tomato.totalTime}}</div>
+			<!--  <div>{{tomato}}</div> -->
+		</div>
+
+
 		<h1>Angemeldete Tomaten</h1>
 
 		<div ng-repeat="(key, value) in vm.users | groupBy :'group.name'"
@@ -42,7 +54,8 @@
 					<i class="fa fa-user infoview-font-normal"></i> {{user.nr}}
 				</div>
 				<div class="col-md-4 infoview-font-normal">{{user.name}}</div>
-				<div class="col-md-2 infoview-font-normal">{{user.remainingTime | secondsToDateTime | date:'HH:mm:ss'}}</div>
+				<div class="col-md-2 infoview-font-normal">{{user.remainingTime
+					| secondsToDateTime | date:'HH:mm:ss'}}</div>
 			</div>
 
 		</div>
