--- a/src/main/resources/web/adminview/index.html
+++ b/src/main/resources/web/adminview/index.html
@@ -26,8 +26,32 @@
 <input type="text" id="msg"/>
 <button id="sendBtn">Send</button>
 <button id="broadcastBtn">Broadcast</button>
+<button id="jsonBtn">JSon Broadcast</button>
 <button id="connectBtn">Connect</button>
 <button id="disconnectBtn">Disconnect</button>
+
+<div></br></div>
+
+<div>
+	<button id="broadcastAddUsersBtn">Add Users (Nur für Info Seite, User werden nicht im Pomodoro Server angelegt)</button>
+	<div>
+		<label>{"method" : "addUser", "object" : { "nr" : "P12340", "name" : "Doe", "group" : { "name" : "Kontakt Management" }, "state" : "ONLINE", "remainingTime" : 0, tomatoTime" : 0, "startTime" : null, "taskName" : null}}</label>
+	</div>
+	<div>
+		<label>{"method" : "addUser", "object" : { "nr" : "P12341", "name" : "John", "group" : { "name" : "Kontakt Management" }, "state" : "ONLINE", "remainingTime" : 0, tomatoTime" : 0, "startTime" : null, "taskName" : null}}</label>
+	</div>
+	<div>
+		<label>{"method" : "addUser", "object" : { "nr" : "P12342", "name" : "John", "group" : { "name" : "Kontakt Management" }, "state" : "ONLINE", "remainingTime" : 0, tomatoTime" : 0, "startTime" : null, "taskName" : null}}</label>
+	</div>
+</div>
+
+<div></br></div>
+<div>
+	<button id="broadcastStartTimerBtn">Start Timer (Nur für Info Seite, User werden nicht im Pomodoro Server angelegt)</button>
+	<div>
+		<label>{"method" : "start", "object" : { "nr" : "P12340", "name" : "John", "group" : { "name" : "Kontakt Management" }, "state" : "BUSY", "remainingTime" : 395, "tomatoTime" : 395, "startTime" : { "millis" : 1447795918702}, "taskName" : "Ein ganz wichtiger Task" }}"</label>
+	</div>
+</div>
 
 <script src="/lib/jquery-2.1.4/jquery-2.1.4.min.js"></script>
 <script src="/admin/js/admin-view.js"></script>
